# AI_Ledger

./: .gitignore  AI_Ledger.code-workspace  Makefile  check_models.py  config.py  database.py  home.py  ledger.db  main.py  pyproject.toml  test_db.py
components/: charts.py  formatters.py
core/: finance.py  real_estate.py
pages/: _onboarding.py  budget.py  cashflow.py  dashboard.py  export_to_claude.py  fixed_expenses.py  monthly_review.py  onboarding.py  real_estate.py
